force-app/main/default/objects/RMA_Order__c/RMA_Order__c.object-meta.xml
<CustomObject>
    <description>This Object is used to capture RMA requests</description>
    <label>RMA Request</label>
    <nameField>
        <displayFormat>RMA-{0000000}</displayFormat>
        <label>RMA Request #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RMA Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>