force-app/main/default/objects/RMA_Order__c/fields/Additional_Interested_Parties_RMA__c.field-meta.xml
<CustomField>
    <fullName>Additional_Interested_Parties_RMA__c</fullName>
    <label>Additional Interested Parties</label>
    <length>255</length>
    <type>Text</type>
</CustomField>