force-app/main/default/objects/RMA_Order__c/fields/Appliance__c.field-meta.xml
<CustomField>
    <fullName>Appliance__c</fullName>
    <label>Appliance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>