force-app/main/default/objects/RMA_Order__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to capture related Asset</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>RMA_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>