force-app/main/default/objects/RMA_Order__c/fields/Chasis_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Chasis_Quantity__c</fullName>
    <label>Chasis Quantity</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>