force-app/main/default/objects/RMA_Order__c/fields/Chassis__c.field-meta.xml
<CustomField>
    <fullName>Chassis__c</fullName>
    <label>Chassis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>