force-app/main/default/objects/RMA_Order__c/fields/Cluster_ID__c.field-meta.xml
<CustomField>
    <fullName>Cluster_ID__c</fullName>
    <label>Cluster ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>