force-app/main/default/objects/RMA_Order__c/fields/Cluster_Link__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Link__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+ Cluster_ID__c , Cluster__c ,&apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cluster</label>
    <type>Text</type>
</CustomField>