force-app/main/default/objects/RMA_Order__c/fields/CMOS_Battery_Quantity__c.field-meta.xml
<CustomField>
    <fullName>CMOS_Battery_Quantity__c</fullName>
    <label>CMOS Battery Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>