force-app/main/default/objects/RMA_Order__c/fields/Comment_if_any__c.field-meta.xml
<CustomField>
    <fullName>Comment_if_any__c</fullName>
    <description>This is to track Comment related to RMA request</description>
    <label>Comment (if any)</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>