force-app/main/default/objects/RMA_Order__c/fields/CopyAdrressfromAccount__c.field-meta.xml
<CustomField>
    <fullName>CopyAdrressfromAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CopyAdrressfromAccount</label>
    <type>Checkbox</type>
</CustomField>