force-app/main/default/objects/RMA_Order__c/fields/Customer_Ref_number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Ref_number__c</fullName>
    <label>Customer  Reference #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>