force-app/main/default/objects/RMA_Order__c/fields/Date_of_Smart_Hands_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Smart_Hands_Arrival__c</fullName>
    <description>Use this date if the customer has any specific requirement on delivery time outside of the service level that’s listed below/above</description>
    <inlineHelpText>testttt</inlineHelpText>
    <label>Date of Smart Hands Arrival</label>
    <type>Date</type>
</CustomField>