force-app/main/default/objects/RMA_Order__c/fields/Drive__c.field-meta.xml
<CustomField>
    <fullName>Drive__c</fullName>
    <description>This is to track Drive  related to RMA request</description>
    <label>HDD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>