force-app/main/default/objects/RMA_Order__c/fields/Entitled_for_Smart_Hands_Service__c.field-meta.xml
<CustomField>
    <fullName>Entitled_for_Smart_Hands_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field capture if smart hands service is requested</description>
    <label>Entitled for Smart Hands Service</label>
    <type>Checkbox</type>
</CustomField>