force-app/main/default/objects/RMA_Order__c/fields/Flash_Email_History__c.field-meta.xml
<CustomField>
    <fullName>Flash_Email_History__c</fullName>
    <label>Flash Email History</label>
    <length>131070</length>
    <type>LongTextArea</type>
</CustomField>