force-app/main/default/objects/RMA_Order__c/fields/IsValidPremiumSupport__c.field-meta.xml
<CustomField>
    <fullName>IsValidPremiumSupport__c</fullName>
    <formula>Asset__r.Premium_Support_End_Date__c &gt;=TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsValidPremiumSupport</label>
    <type>Checkbox</type>
</CustomField>