force-app/main/default/objects/RMA_Order__c/fields/Memory__c.field-meta.xml
<CustomField>
    <fullName>Memory__c</fullName>
    <description>This is to track Memory related to RMA request</description>
    <label>Memory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>