force-app/main/default/objects/RMA_Order__c/fields/NIC__c.field-meta.xml
<CustomField>
    <fullName>NIC__c</fullName>
    <description>This is to track NIC related to RMA request</description>
    <label>NIC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>