force-app/main/default/objects/RMA_Order__c/fields/NIC_Quantity__c.field-meta.xml
<CustomField>
    <fullName>NIC_Quantity__c</fullName>
    <label>NIC Quantity</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>