force-app/main/default/objects/RMA_Order__c/fields/Node__c.field-meta.xml
<CustomField>
    <fullName>Node__c</fullName>
    <description>This field is to track node with any issue</description>
    <label>Node</label>
    <length>255</length>
    <type>Text</type>
</CustomField>