force-app/main/default/objects/RMA_Order__c/fields/Node_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Node_Quantity__c</fullName>
    <label>Node Quantity</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>