force-app/main/default/objects/RMA_Order__c/fields/NRD_Policy__c.field-meta.xml
<CustomField>
    <fullName>NRD_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NRD Policy</label>
    <type>Checkbox</type>
</CustomField>