force-app/main/default/objects/RMA_Order__c/fields/Order_No_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Order_No_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup is created to show up on Case under RMA section</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>RMA Requests</relationshipLabel>
    <relationshipName>RMA_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>