force-app/main/default/objects/RMA_Order__c/fields/Parent_Case__c.field-meta.xml
<CustomField>
    <fullName>Parent_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to capture related case</description>
    <label>Parent Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>RMA_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>