force-app/main/default/objects/RMA_Order__c/fields/Power_Supply__c.field-meta.xml
<CustomField>
    <fullName>Power_Supply__c</fullName>
    <description>This is to track Power Supply related to RMA request</description>
    <label>Power Supply</label>
    <length>255</length>
    <type>Text</type>
</CustomField>