force-app/main/default/objects/RMA_Order__c/fields/Power_Supply_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Power_Supply_Quantity__c</fullName>
    <label>Power Supply Quantity</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>