force-app/main/default/objects/RMA_Order__c/fields/Resend_Flash_Email__c.field-meta.xml
<CustomField>
    <fullName>Resend_Flash_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resend Flash Email</label>
    <type>Checkbox</type>
</CustomField>