force-app/main/default/objects/RMA_Order__c/fields/RMA_State__c.field-meta.xml
<CustomField>
    <fullName>RMA_State__c</fullName>
    <description>This field is created to remove picklist values</description>
    <label>Shipping State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>