force-app/main/default/objects/RMA_Order__c/fields/Send_Smart_Hands_Service__c.field-meta.xml
<CustomField>
    <fullName>Send_Smart_Hands_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked If Smart Hand Service is requested by Customer</description>
    <inlineHelpText>Checked If Smart Hand Service is requested by Customer</inlineHelpText>
    <label>Send Smart Hands Service?</label>
    <type>Checkbox</type>
</CustomField>