force-app/main/default/objects/RMA_Order__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Next Business Day: By End of Day</fullName>
            </value>
            <value>
                <fullName>Next Business Day: 10:30am</fullName>
            </value>
            <value>
                <fullName>Next Business Day: 8am</fullName>
            </value>
            <value>
                <fullName>By End of Day</fullName>
                <isActive>false</isActive>
                <label>By End of Day</label>
            </value>
            <value>
                <fullName>Early Morning: 8am - 10am</fullName>
                <isActive>false</isActive>
                <label>Early Morning: 8am - 10am</label>
            </value>
            <value>
                <fullName>Morning: 10am - 12pm</fullName>
                <isActive>false</isActive>
                <label>Morning: 10am - 12pm</label>
            </value>
            <value>
                <fullName>Next Business Day By 10:30 AM</fullName>
                <isActive>false</isActive>
                <label>Next Business Day By 10:30 AM</label>
            </value>
            <value>
                <fullName>Next Business Day By 8 AM</fullName>
                <isActive>false</isActive>
                <label>Next Business Day By 8 AM</label>
            </value>
            <value>
                <fullName>Next Business Day By End of Day</fullName>
                <isActive>false</isActive>
                <label>Next Business Day By End of Day</label>
            </value>
            <value>
                <fullName>Next Business Day: 10am</fullName>
                <isActive>false</isActive>
                <label>Next Business Day: 10am</label>
            </value>
            <value>
                <fullName>Next Business Day: 10am - 12pm</fullName>
                <isActive>false</isActive>
                <label>Next Business Day: 10am - 12pm</label>
            </value>
            <value>
                <fullName>Next Business Day: 8am - 10am</fullName>
                <isActive>false</isActive>
                <label>Next Business Day: 8am - 10am</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>