force-app/main/default/objects/RMA_Order__c/fields/Ship_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RMA Requests</relationshipLabel>
    <relationshipName>RMA_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>