force-app/main/default/objects/RMA_Order__c/fields/Ship_To_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Phone_Number__c</fullName>
    <label>Ship To Phone Number</label>
    <type>Phone</type>
</CustomField>