force-app/main/default/objects/RMA_Order__c/fields/ShippingState__c.field-meta.xml
<CustomField>
    <fullName>ShippingState__c</fullName>
    <label>Shipping State/Province</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ShippingCountry__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>State_Province</valueSetName>
    </valueSet>
</CustomField>