force-app/main/default/objects/RMA_Order__c/fields/Smart_Hands_Change_Requested__c.field-meta.xml
<CustomField>
    <fullName>Smart_Hands_Change_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Smart Hands Change Requested</label>
    <type>Checkbox</type>
</CustomField>