force-app/main/default/objects/RMA_Order__c/fields/Smart_Hands_Provider__c.field-meta.xml
<CustomField>
    <fullName>Smart_Hands_Provider__c</fullName>
    <label>Smart Hands Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flash Global</fullName>
            </value>
            <value>
                <fullName>TSP Inc.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>