force-app/main/default/objects/RMA_Order__c/fields/Smart_Hands_Service_Level__c.field-meta.xml
<CustomField>
    <fullName>Smart_Hands_Service_Level__c</fullName>
    <description>This tracks the level of service for Smart Hands Request</description>
    <label>Smart Hands Service Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4 hours</fullName>
            </value>
            <value>
                <fullName>Next Business day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>