force-app/main/default/objects/RMA_Order__c/fields/SSD_Quantity__c.field-meta.xml
<CustomField>
    <fullName>SSD_Quantity__c</fullName>
    <label>SSD Quantity</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>