force-app/main/default/objects/RMA_Order__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Replacement</fullName>
                <default>true</default>
                <label>Advanced Replacement</label>
            </value>
            <value>
                <fullName>Repair/Replace</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>