force-app/main/default/objects/RMA_Order__c/fields/Valid_Support__c.field-meta.xml
<CustomField>
    <fullName>Valid_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valid Support</label>
    <type>Checkbox</type>
</CustomField>