force-app/main/default/objects/RMA_Order__c/fields/Vendor_message__c.field-meta.xml
<CustomField>
    <fullName>Vendor_message__c</fullName>
    <description>To be Populated  on Orders</description>
    <label>Vendor message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>