force-app/main/default/objects/RMA_Order__c/validationRules/RMA_ValidateSmartHandsDate.validationRule-meta.xml
<ValidationRule>
    <fullName>RMA_ValidateSmartHandsDate</fullName>
    <active>true</active>
    <description>This checks if Send Dmart HAnds Service is TRUE the Smart Hands Date(Date_of_Smart_Hands_Arrival__c) is Required</description>
    <errorConditionFormula>NOT ( $Setup.ShGl_DisableBusinessLogic__c.Disable_Opportunity_Validation_Rules__c ) &amp;&amp;  
OR((
Send_Smart_Hands_Service__c &amp;&amp; ISBLANK( Date_of_Smart_Hands_Arrival__c )),
Send_Smart_Hands_Service__c = false &amp;&amp; NOT(ISBLANK( Date_of_Smart_Hands_Arrival__c )))</errorConditionFormula>
    <errorDisplayField>Date_of_Smart_Hands_Arrival__c</errorDisplayField>
    <errorMessage>Date of Smart Hands Arrival is only required when Send Smart Hands Service is checked</errorMessage>
</ValidationRule>