force-app/main/default/objects/RMA_Order__c/validationRules/RMA_ValidateSmartHandService_Checkbox.validationRule-meta.xml
<ValidationRule>
    <fullName>RMA_ValidateSmartHandService_Checkbox</fullName>
    <active>true</active>
    <description>Once the &quot;Send Smart Hands Service?&quot; checkbox checked then user can not mark it as false.</description>
    <errorConditionFormula>AND(PRIORVALUE(Send_Smart_Hands_Service__c), TRUE,
ISCHANGED(Send_Smart_Hands_Service__c))</errorConditionFormula>
    <errorDisplayField>Send_Smart_Hands_Service__c</errorDisplayField>
    <errorMessage>This can not be marked as unchecked.</errorMessage>
</ValidationRule>