force-app/main/default/objects/RMA_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assets__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Parent_Case__c</columns>
    <columns>Entitled_for_Smart_Hands_Service__c</columns>
    <columns>Status__c</columns>
    <columns>Drive__c</columns>
    <columns>SSD__c</columns>
    <columns>Node__c</columns>
    <columns>Chassis__c</columns>
    <columns>Power_Supply__c</columns>
    <columns>Memory__c</columns>
    <columns>NIC__c</columns>
    <columns>Ship_To_Name__c</columns>
    <columns>CMOS_Battery__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>