force-app/main/default/objects/RMA_Order__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Ship_To_Contact_Name__c</columns>
    <columns>Ship_To_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>