force-app/main/default/objects/RMA_Order__c/listViews/RMA_Approvals_Queue_RMA_Order.listView-meta.xml
<ListView>
    <fullName>RMA_Approvals_Queue_RMA_Order</fullName>
    <filterScope>Queue</filterScope>
    <label>RMA Approvals Queue</label>
    <queue>RMA_Approvals_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>